--- a/style.css
+++ b/style.css
@@ -2,11 +2,14 @@
 
 @import url('https://fonts.googleapis.com/css?family=Sofia');
 
+@import url('https://fonts.googleapis.com/css?family=Lucida Console');
+@import url('https://fonts.googleapis.com/css?family=Franklin Gothic Medium');
+
 html,
 body {
   height: 100%;
   width: 100%;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Franklin Gothic Medium', sans-serif;
   color: #222;
 }
 
@@ -66,6 +69,15 @@ body {
 .about {
   font-family: 'Sofia';
   font-weight: bold;
+}
+
+.lead {
+  font-family: 'Lucida Console';
+}
+
+.col-lg-7 {
+  padding-left: 50px;
+  padding-top: 50px;
 }
 
 /*
