--- a/style.css
+++ b/style.css
@@ -35,18 +35,8 @@ body {
   padding: 5rem;
 }
 
-.fa-facebook :hover .fa-google :hover {
+.fa-facebook :hover .fa-google :hover .fa-envelope :hover {
   color: #d5d5d5;
-}
-
-.contact-clean {
-  background: #000;
-  padding: 80px 0;
-}
-@media (max-width: 767px) {
-  .contact-clean {
-    padding: 20px 0;
-  }
 }
 
 .contact-clean form {
@@ -70,10 +60,26 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-
     color: beige;
-
     padding: 50px;
+  }
+  .image {
+    background-image: url('img/pexels-daniel-putzer-633409\ \(1\).png');
+    height: auto;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: beige;
+    padding: 50px;
+  }
+}
+
+.contact-clean {
+  padding: 80px 0;
+}
+@media (max-width: 767px) {
+  .contact-clean {
+    padding: 20px 0;
   }
 }
 
@@ -84,9 +90,16 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-
     color: beige;
-
+    padding: 50px;
+  }
+  .image {
+    background-image: url('img/pexels-daniel-putzer-633409\ \(1\).png');
+    height: fit-content;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    color: beige;
     padding: 50px;
   }
 }
@@ -116,11 +129,6 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  z-index: 3;
-}
-
-.col-md-6 {
-  z-index: 1;
 }
 
 .display-4 {
@@ -142,4 +150,6 @@ Large (lg) devices (desktops, 992px and up)
 
 Extra (xl) large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) { ... }
+
+
 */
