--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
     padding: 50px;
   }
   .image {
-    background-image: url('img/pexels-daniel-putzer-633409\ \(1\).png');
+    background-image: url('img/pexels-little-visuals-1954.png');
     height: auto;
     background-position: center;
     background-repeat: no-repeat;
