--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ body {
 }
 
 .contact-clean {
-  padding: 80px 0;
+  padding: 60px 0;
 }
 @media (max-width: 767px) {
   .contact-clean {
@@ -105,7 +105,7 @@ body {
 }
 
 .about {
-  font-family: 'Sofia';
+  font-family: 'Franklin Gothic Medium';
   font-weight: bold;
   background-image: url('img/back1234.png');
   height: auto;
